# lumen/routes/api.php
@@ -15,26 +15,4 @@ $router->get('/sitemap_categories', function () use ($router) {
     return response()->json(\App\Models\SitemapCategory::all());
 });
 # CREATE
-$router->post('/sitemap_categories/{name}', ['uses' => 'SitemapCategoriesController@create']);
-
-/*
-Route::resource('users', 'UserController', ['only' => ['store']]);
-
-Route::resource('cart_lotteries', 'CartSubscriptionController',
-    ['parameters' => [
-        'cart_lotteries' => 'cart_subscription',
-        ],
-    'names' => [
-        'store' => 'cart_subscriptions.store',
-        'show' => 'cart_subscriptions.show',
-        'update' => 'cart_subscriptions.update',
-        'destroy' => 'cart_subscriptions.destroy',
-        ]
-    ]
-    );
-
-
-Route::get('/lottery_syndicate_subscriptions', 'SyndicateCartSubscriptionController@index');
-Route::put('/users', 'UserController@update_me');
-Route::resource('cart_raffles', 'CartRaffleController', ['only' => ['show', 'store', 'destroy', 'update']]);
-*/
+$router->post('/sitemap_categories/{name}[/{parent_id}]', ['uses' => 'SitemapCategoriesController@create']);
